terraform/scripts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  namespace: ticketing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  rules:
    - http:
        paths:
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: event-svc
                port:
                  number: 5000

          - path: /reserv
            pathType: Prefix
            backend:
              service:
                name: reserv-svc
                port:
                  number: 5000

          - path: /worker
            pathType: Prefix
            backend:
              service:
                name: worker-svc
                port:
                  number: 5000
